style.css
@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');

:root {
    --c1: #0c0c0c;
    --c2: #ffffff;
    --c3: #cec000;
    --c4: #0c0c0ce6;
    scroll-padding-top: 10rem;
}

@media only screen and (min-width : 0) {
    #about {
        flex-wrap: wrap;
    }
}
@media only screen and (min-width : 992px) {
    #about {
        flex-wrap: nowrap;
    }
}

* {
    margin: 0;
    text-decoration: none;
    scroll-behavior: smooth;
}

body {
    font-family: "Nova Square", sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: var(--c1);
}

nav {
    z-index: 1;
    position: fixed;
    top: 0;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    background-color: var(--c4);
    padding: 1rem 2.3rem 1rem 1rem;
    backdrop-filter: blur(2px);
}

a {
    font-size: 1.5rem;
    color: var(--c3);
    transition: .3s;
}
a:hover {
    transform: translateY(-2px);
}
a:active {
    scale: .95;
}

#navLine {
    z-index: 1;
    position: fixed;
    top: 3.8rem;
    width: 100%;
    border: 2px solid var(--c2);
    transition: width 1s, opacity 1s;
}

#logo {
    height: 100vh;
    width: 100vw;
    background: url(imgs/NBTX-logo.png) no-repeat center / contain;
    animation: glow 2s alternate infinite;
}

.titles {
    color: var(--c2);
}

#releases, #social, #about {
    display: flex;
}

#releases {
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 90vw;
    gap: 2rem 0;
}

#social, #about {
    justify-content: space-evenly;
    align-items: center;
    gap: 1rem;
    width: 75vw;
    border: 4px solid var(--c2);
    padding: 2rem;
}

#aboutTxt {
    font-size: 1.5rem;
}

#aboutImg {
    width: 200%;
}

.section {
    max-width: 100rem;
    color: var(--c2);
    margin: 3rem 0;
}

.box {
    display: flex;
    flex-direction: column;
    width: 20rem;
    border: 4px solid var(--c2);
}

.track, .trackCover {
    width: 100%;
}

#rollTop {
    position: fixed;
    right: -3rem;
    bottom: 1rem;
    padding: 0 .2rem;
    background-color: var(--c4);
    border: 3px solid var(--c2);
    transition: .5s;
}

@keyframes glow {
    from {
        filter: drop-shadow(0 0 1rem var(--c2));
    } to {
        filter: drop-shadow(0 0 1rem var(--c3));
    }
}

